[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "djo"
version = "0.1.0"
authors = [
  { name="David Owens", email="davidjayowens+github@gmail.com" },
]
description = "Convenient functions for common tasks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC-BY-NC-SA-4.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/davidjayowens/djo"
Issues = "https://github.com/davidjayowens/djo/issues"